# pkg_gov_uk_dashboards

./: .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.md  compile-scss.js  constants.py  environment.yml  map2.py  new_requirements.txt  package-lock.json  package.json  pyproject.toml  requirements-pip-chill.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: check-before-merging.yml  deployment.yml
GOV_UK_Colours/: __init__.py  colours.py
gov_uk_dashboards/: __init__.py  axes.py  colours.py  compile-scss.js  constants.py  log_kpi.py  map2.py  symbols.py  template.html  template.py
gov_uk_dashboards/assets/: __init__.py  attach-event-to-dash.js  browser-tab-text.js  clientside.js  compile-scss.js  custom_map_style_functions.js  dashboard.css  dashboard.scss  download-map.js  get_assets_folder.py  include-leaflet-image.html  index.html  leflet-resize.js  map-setup.js  mobile-nav.js  package-lock.json  package.json  register_maps  resize.js  responsive.js  scripts.js
gov_uk_dashboards/colours/: colours.py
gov_uk_dashboards/components/: __init__.py  create_download_chart_button.py  create_download_data_button.py  display_chart_or_table_with_header.py  generate_dash_graph_from_figure.py  update_layout_bgcolor_margin.py
gov_uk_dashboards/figures/: __init__.py  chart_data.py  line_chart.py
gov_uk_dashboards/formatting/: __init__.py  human_readable.py  number_formatting.py  path_formatting.py  round_and_add_prefix_and_suffix.py  rounding.py  text_functions.py
scss/: dashboard.scss
(+154 files in other folders)
