[metadata]
name = GOV_UK_Colours
version = 0.0.1
author = Department for Levelling Up, Housing and Communities
author-email = matthew.sutton@communities.gov.uk
summary = Provides Gov.UK colours in a class for convenient use, see: https://design-system.service.gov.uk/styles/colour/
description-file =
    README.md
home-page = https://www.gov.uk/government/organisations/department-for-levelling-up-housing-and-communities
requires-dist = setuptools

[files]
packages =
    setup
    setup.cfg
    setup.cfg.extern
